--- a/src/app/pages/home/home.style.css
+++ b/src/app/pages/home/home.style.css
@@ -44,8 +44,38 @@ body {
   grid-column: 1/-1;
   justify-content: space-around;
   align-items: center;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   padding: 1rem;
+}
+
+.header-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-nav .nav-links {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+  margin: 0;
+  padding: 20px;
+}
+
+.nav-links ul li {
+  padding: 0.5em;
+}
+
+.nav-links li a {
+  color: #171616;
+  text-decoration: none;
+  font-size: 1.3em;
+  font-weight: 500;
+  transition: color 0.3s ease;
+}
+
+.nav-links li a:hover {
+  color: var(--primary-color);
 }
 
 .header-logo {
